adding slug to projects #4

--- a/server/api/projects/models/projects.settings.json
+++ b/server/api/projects/models/projects.settings.json
@@ -53,6 +53,9 @@
       "plugin": "upload",
       "required": false,
       "pluginOptions": {}
+    },
+    "slug": {
+      "type": "string"
     }
   }
 }
