--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
