use webp instead of png #12

--- a/server/api/projects/models/projects.settings.json
+++ b/server/api/projects/models/projects.settings.json
@@ -56,6 +56,21 @@
     },
     "slug": {
       "type": "string"
+    },
+    "video": {
+      "type": "boolean"
+    },
+    "file": {
+      "collection": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
