--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "contentful": "^8.4.4",
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
     "react": "17.0.2",
