--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-player": "^2.9.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "sass": "^1.60.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
