--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "contentful": "^8.4.4",
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
+    "nextjs-fonts": "^0.22.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-player": "^2.9.0",
